fix: spacing between dates on mobile

--- a/src/components/article/card.css
+++ b/src/components/article/card.css
@@ -14,6 +14,10 @@
       display: block;
     }
 
+    .published {
+      margin-bottom: 0.2rem;
+    }
+
     .changelog {
       display: none;
     }
